--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">St.Siomeow</string>
+    <string name="text_view1">Name</string>
+    <string name="plain_text1">Enter name</string>
+    <string name="btnSubmit">Submit</string>
 </resources>
